# zebra-launcher

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: cd-deploy-to-dev.yml  chore-clean-dev.yml  ci-lint-codebase.yml  sub-build-docker-image.yml  sub-cloudrun-deploy.yml  sub-unit-tests.yml
docker/: Dockerfile
src/: App.tsx  Logs.tsx  app.rs  main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: child_process.rs  main.rs  process.rs  state.rs
src/pages/: Configure.tsx  Logs.tsx
src/tests/: example_logs.ts
