[package]
name = "zebra-app-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.5", features = ["csr"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", rev = "e8ea8c3fec671fd2edea321ddf3283e4e1505ecb", features = ["all"]}
futures = "0.3.30"

[workspace]
members = ["src-tauri"]
